Spreadplayers custom almost done